@@ -6,6 +6,7 @@ Version 1.1.3 to be released
 ----------------------------
 - Bug #1176: CVarDumper may omit some backslashes in the syntax-highlighted display (Qiang)
 - Bug #1190: CLocale::getMonthNames may fail due to a typo (Qiang)
+- Enh #1166: Added CActiveRecord::setOldPrimaryKey (Qiang)
 - Enh #1188: Removed exception message display in production mode when a DB connection fails to improve security (Qiang)
 - Enh #1189: Added $loadedOnly parameter to CModule::getComponents() so that it can return all application components including unloaded ones (Qiang)
 - Enh #1199: AR's count() method now respects the 'select' option in the query criteria (Qiang)
